# research-os

./: .dockerignore  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/api/: .dockerignore  Dockerfile  package.json  pyproject.toml
apps/api/app/: main.py
apps/api/app/application/agent_framework/: base_agent.py  base_graph.py  compiler.py  state_manager.py  tool_factory.py
apps/api/app/application/memory/: base_memory.py
apps/api/app/application/services/: __init__.py  agent_service.py  agent_template_service.py  (+19 more)
apps/api/app/common/: exceptions.py  response.py  utils.py
apps/api/app/core/: agents.py  celery_app.py  config.py  database.py  logger.py  prompt_fallback.py  upload_config.py  vector_config.py
apps/api/app/qa/: graph.py  nodes.py  state.py  tools.py
apps/api/app/repositories/: agent_repository.py  agent_template_repository.py  artifact_repository.py  document_chunk_repository.py  document_image_repository.py  document_repository.py  memory_repository.py  project_repository.py  skill_repository.py  task_repository.py
apps/api/app/scripts/: icon_health_check.py
apps/api/app/server/: deps.py
apps/api/app/skills/: base.py  builtins.py  registry.py  search_papers.py  search_skills.py
apps/api/app/smart_draw/: graph.py  nodes.py  state.py
apps/api/app/utils/: file_validator.py  translation.py  upload_utils.py
apps/api/app/workers/: task_jobs.py
apps/api/embedding/: mm_vector_qwen3.py
apps/api/scripts/: check_icons_status.py  cleanup_old_tables.py  init_db.py  init_document_tables.py  seed_memory.py  seed_skills.py
(+216 files in other folders)
